register hanging leaves

--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -4,17 +4,20 @@
   "block.witches-way.alder_wood": "Alder Wood",
   "block.witches-way.stripped_alder_log": "Stripped Alder Log",
   "block.witches-way.stripped_alder_wood": "Stripped Alder Wood",
+  "block.witches-way.hanging_alder_leaves": "Hanging Alder Leaves",
   "block.witches-way.alder_planks": "Alder Planks",
   "block.witches-way.hawthorn_log": "Hawthorn Log",
   "block.witches-way.hawthorn_wood": "Hawthorn Wood",
   "block.witches-way.stripped_hawthorn_log": "Stripped Hawthorn Log",
   "block.witches-way.stripped_hawthorn_wood": "Stripped Hawthorn Wood",
   "block.witches-way.hawthorn_planks": "Hawthorn Planks",
+  "block.witches-way.hanging_hawthorn_leaves": "Hanging Hawthorn Leaves",
   "block.witches-way.rowan_log": "Rowan Log",
   "block.witches-way.rowan_wood": "Rowan Wood",
   "block.witches-way.stripped_rowan_log": "Stripped Rowan Log",
   "block.witches-way.stripped_rowan_wood": "Stripped Rowan Wood",
   "block.witches-way.rowan_planks": "Rowan Planks",
+  "block.witches-way.hanging_rowan_leaves": "Hanging Rowan Leaves",
   "block.witches-way.white_stone_altar": "White Stone Altar",
   "block.witches-way.light_gray_stone_altar": "Light Gray Stone Altar",
   "block.witches-way.gray_stone_altar": "Gray Stone Altar",
