sapling json files

--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -30,6 +30,8 @@
   "block.witches-way.hanging_rowan_leaves": "Hanging Rowan Leaves",
   "block.witches-way.rowan_sapling": "Rowan Sapling",
 
+  "block.witches-way.spanish_moss": "Spanish Moss",
+
   "block.witches-way.white_stone_altar": "White Stone Altar",
   "block.witches-way.light_gray_stone_altar": "Light Gray Stone Altar",
   "block.witches-way.gray_stone_altar": "Gray Stone Altar",
