glistening weed model and textures

--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -31,6 +31,7 @@
   "block.witches-way.rowan_sapling": "Rowan Sapling",
 
   "block.witches-way.spanish_moss": "Spanish Moss",
+  "block.witches-way.glistening_weed": "Glistening Weed",
 
   "block.witches-way.white_stone_altar": "White Stone Altar",
   "block.witches-way.light_gray_stone_altar": "Light Gray Stone Altar",
