--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.witches-way.stripped_alder_wood": "Stripped Alder Wood",
   "block.witches-way.alder_planks": "Alder Planks",
   "block.witches-way.alder_stairs": "Alder Stairs",
+  "block.witches-way.alder_slab": "Alder Slab",
   "block.witches-way.alder_leaves": "Alder Leaves",
   "block.witches-way.hanging_alder_leaves": "Hanging Alder Leaves",
   "block.witches-way.alder_sapling": "Alder Sapling",
@@ -16,6 +17,7 @@
   "block.witches-way.stripped_hawthorn_wood": "Stripped Hawthorn Wood",
   "block.witches-way.hawthorn_planks": "Hawthorn Planks",
   "block.witches-way.hawthorn_stairs": "Hawthorn Stairs",
+  "block.witches-way.hawthorn_slab": "Hawthorn Slab",
   "block.witches-way.hawthorn_leaves": "Hawthorn Leaves",
   "block.witches-way.hanging_hawthorn_leaves": "Hanging Hawthorn Leaves",
   "block.witches-way.hawthorn_sapling": "Hawthorn Sapling",
@@ -26,6 +28,7 @@
   "block.witches-way.stripped_rowan_wood": "Stripped Rowan Wood",
   "block.witches-way.rowan_planks": "Rowan Planks",
   "block.witches-way.rowan_stairs": "Rowan Stairs",
+  "block.witches-way.rowan_slab": "Rowan Slab",
   "block.witches-way.rowan_leaves": "Rowan Leaves",
   "block.witches-way.hanging_rowan_leaves": "Hanging Rowan Leaves",
   "block.witches-way.rowan_sapling": "Rowan Sapling",
