--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -59,7 +59,7 @@
   "item.witches-way.mandrake_seeds": "Mandrake Seeds",
 
   "item.witches-way.belladonna": "Belladonna",
-  "item.witches-way.belladonna_root": "Belladonna Root",
+  "item.witches-way.mandrake_root": "Mandrake Root",
 
   "item.witches-way.witches_handbook": "Witches' Handbook"
 }
