--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -61,5 +61,7 @@
   "item.witches-way.belladonna": "Belladonna",
   "item.witches-way.mandrake_root": "Mandrake Root",
 
+  "item.witches-way.mutating_mixture": "Mutating Mixture",
+
   "item.witches-way.witches_handbook": "Witches' Handbook"
 }
