--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -63,5 +63,7 @@
 
   "item.witches-way.mutating_mixture": "Mutating Mixture",
 
-  "item.witches-way.witches_handbook": "Witches' Handbook"
+  "item.witches-way.witches_handbook": "Witches' Handbook",
+
+  "book.witches-way.landing_text": ""
 }
