--- a/src/main/resources/assets/witches-way/lang/en_us.json
+++ b/src/main/resources/assets/witches-way/lang/en_us.json
@@ -63,6 +63,10 @@
 
   "item.witches-way.mutating_mixture": "Mutating Mixture",
 
+  "item.witches-way.alder_broom": "Alder Broom",
+  "item.witches-way.hawthorn_broom": "Hawthorn Broom",
+  "item.witches-way.rowan_broom": "Rowan Broom",
+
   "item.witches-way.witches_handbook": "Witches' Handbook",
 
   "book.witches-way.landing_text": ""
